@@ -16292,10 +16292,10 @@
 ;; Conditional move instructions.
 
 (define_expand "mov<mode>cc"
-  [(set (match_operand:SWIM 0 "register_operand" "")
-	(if_then_else:SWIM (match_operand 1 "ordered_comparison_operator" "")
-			   (match_operand:SWIM 2 "<general_operand>" "")
-			   (match_operand:SWIM 3 "<general_operand>" "")))]
+  [(set (match_operand:SWIM 0 "register_operand")
+	(if_then_else:SWIM (match_operand 1 "comparison_operator")
+			   (match_operand:SWIM 2 "<general_operand>")
+			   (match_operand:SWIM 3 "<general_operand>")))]
   ""
   "if (ix86_expand_int_movcc (operands)) DONE; else FAIL;")
 
@@ -16401,9 +16401,9 @@
 (define_expand "mov<mode>cc"
   [(set (match_operand:X87MODEF 0 "register_operand" "")
 	(if_then_else:X87MODEF
-	  (match_operand 1 "ix86_fp_comparison_operator" "")
-	  (match_operand:X87MODEF 2 "register_operand" "")
-	  (match_operand:X87MODEF 3 "register_operand" "")))]
+	  (match_operand 1 "comparison_operator")
+	  (match_operand:X87MODEF 2 "register_operand")
+	  (match_operand:X87MODEF 3 "register_operand")))]
   "(TARGET_80387 && TARGET_CMOVE)
    || (SSE_FLOAT_MODE_P (<MODE>mode) && TARGET_SSE_MATH)"
   "if (ix86_expand_fp_movcc (operands)) DONE; else FAIL;")
